--- a/app/views/users/confirm_error_bad_token.html.haml
+++ b/app/views/users/confirm_error_bad_token.html.haml
@@ -1,6 +1,3 @@
 .container
-  %h3
-    Woops
-
-  %p
-    That ticket doesn't match anything in our records. Sorry.
+  %h3= t(".woops")
+  %p= t(".could_not_find_matching_ticket")
