--- a/app/views/users/password_reset.html.haml
+++ b/app/views/users/password_reset.html.haml
@@ -1,7 +1,7 @@
 .container
   %h3
-    Password Reset
+    = t(".password_reset")
   %p
-    We've sent an email to the address you have on file with us.
+    = t(".weve_sent_an_email")
   %p
-    Follow the link back to the site to reset your password!
+    = t(".follow_the_link_back")
