--- a/app/views/users/update_password.html.haml
+++ b/app/views/users/update_password.html.haml
@@ -1,20 +1,20 @@
 .container
   .choose-a-new-pass
     %h3
-      Choose a new password!
+      = t(".choose_a_new_password")
     %p
-      (and try not to forget it...)
+      = t(".and_try_not_to_forget_it")
 
     = form_for @user, html: { class: "form-horizontal form" } do |f|
       = f.hidden_field :password_reset_token, value: params[:token]
       .form-group
         %label{ for: "user_Password" }
-          Update your password
-          = f.password_field :password, placeholder: "Password", class: 'form-control'
+          = t(".update_your_password")
+          = f.password_field :password, placeholder: t(".password"), class: 'form-control'
       .form-group
         %label{ for: "user_password_confirmation" }
-          Password Confirmation
-          = f.password_field :password_confirmation, placeholder: "Password confirmation", class: 'form-control'
+          = t(".password_confirmation")
+          = f.password_field :password_confirmation, placeholder: t(".password_confirmation"), class: 'form-control'
       .actions
-        = f.submit "Update password", class: 'btn btn-primary btn-lg'
+        = f.submit t(".update_password"), class: 'btn btn-primary btn-lg'
 
