--- a/app/views/users/confirm_error_404.html.haml
+++ b/app/views/users/confirm_error_404.html.haml
@@ -1,6 +1,3 @@
 .container
-  %h3
-    Woops
-
-  %p
-    We couldn't find a user with that ID. Something strange is going on.
+  %h3= t(".woops")
+  %p= t(".we_couldnt_find_a_user_with_that_id")
