--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,29 +2,29 @@
   - unless sign_in_partner.present?
     .sign-in-up-header.container
       .row
-        %h1 Get on Bike Index
+        %h1= t(".get_on_bike_index")
   .container
     .sign-in-up-wrap
       .row
         .oauth-providers
           %a.facebook-login{ href: '/auth/facebook' }
             %span.oauth-logo-block= image_tag 'revised/facebook_login.svg'
-            %span.oauth-text-block Sign up using Facebook
+            %span.oauth-text-block= t(".sign_up_using_facebook")
 
           %a.strava-login{ href: '/auth/strava' }
             %span.oauth-logo-block= image_tag 'revised/strava_login.svg'
-            %span.oauth-text-block Sign up using Strava
+            %span.oauth-text-block= t(".sign_up_using_strava")
         .sign-in-up-or
-          %h3 Or
+          %h3= t(".or")
         .main-form
           %h3.sign-in-up-main-form-header
-            Sign up
+            = t(".sign_up")
             %small
               - if sign_in_partner.present?
-                already have a Bike Index account?
+                = t(".already_have_a_bike_index_account")
               - else
-                already have an account?
-              = link_to 'log in', new_session_path(partner: sign_in_partner, email: params[:email])
+                = t(".already_have_an_account")
+              = link_to t(".log_in"), new_session_path(partner: sign_in_partner, email: params[:email])
 
           = form_for @user do |f|
             - if sign_in_partner
@@ -45,20 +45,18 @@
                 = f.check_box :terms_of_service
 
                 - if sign_in_partner == "bikehub"
-                  I agree to BikeHub's
-                  = link_to "terms and conditions", nil, data: { target: "https://basic.bikehub.com/terms.html" }, class: "no-tab"
-                  and Bike Index's
-                  = link_to "terms and conditions", nil, data: { target: terms_path }, class: "no-tab"
+                  = t(".agree_bikeindex_bikehub_toc_html",
+                  bikehub_toc_link: link_to(t(".terms_and_conditions"), nil, data: { target: t(".bikehub_terms_url") }, class: "no-tab"),
+                  bikeindex_toc_link: link_to(t(".terms_and_conditions"), nil, data: { target: terms_path }, class: "no-tab"))
                 - else
-                  I agree to Bike Index's
-                  = link_to "terms and conditions", nil, data: { target: terms_path }, class: "no-tab"
+                  = t(".agree_bikeindex_toc_html", bikeindex_toc_link: link_to(t(".terms_and_conditions"), nil, data: { target: terms_path }, class: "no-tab"))
 
             - unless sign_in_partner.present?
               .checkbox
                 %label
                   = f.check_box :notification_newsletters
-                  Get Bike Index's Newsletter
+                  = t(".get_bike_indexs_newsletter")
 
-            = f.submit "Sign up", class: 'btn btn-primary btn-lg'
+            = f.submit t(".sign_up"), class: 'btn btn-primary btn-lg'
 
-          %p= link_to "Forgot your password?", request_password_reset_users_path
+          %p= link_to t(".forgot_your_password"), request_password_reset_users_path
