--- a/app/views/users/update_password.html.haml
+++ b/app/views/users/update_password.html.haml
@@ -1,9 +1,7 @@
 .container
   .choose-a-new-pass
-    %h3
-      = t(".choose_a_new_password")
-    %p
-      = t(".and_try_not_to_forget_it")
+    %h3= t(".choose_a_new_password")
+    %p (#{t(".and_try_not_to_forget_it")})
 
     = form_for @user, html: { class: "form-horizontal form" } do |f|
       = f.hidden_field :password_reset_token, value: params[:token]
@@ -17,4 +15,3 @@
           = f.password_field :password_confirmation, placeholder: t(".password_confirmation"), class: 'form-control'
       .actions
         = f.submit t(".update_password"), class: 'btn btn-primary btn-lg'
-
