--- a/app/views/users/organization_show.html.haml
+++ b/app/views/users/organization_show.html.haml
@@ -5,77 +5,59 @@
     = @user.email
 
 %p
-  Joined the bike index #{@user.created_at.strftime("%-m/%-d/%Y")}
+  = t(".joined_the_bike_index", timestamp: @user.created_at.strftime("%-m/%-d/%Y"))
 
 %section.full-screen-table.padded
   %p
-    Bikes indexed for
-    %strong
-      = @membership.organization.name
-    by
-    - if @user.name.present?
-      = @user.name
-    - else
-      = @user.email
+    - user = @user.name.present? ? @user.name : @user.email
+    = t(".bikes_indexed_for_org_html", org_name: @membership.organization.name, user: user)
   %table#org-bikes-table.table.table-striped.table-bordered
     %thead
-      / %th
-      /   Link&nbsp;&nbsp;
-      %th
-        Date indexed
-      %th.medium-screens
-        Sent to
-      %th
-        Manufacturer
-      %th.large-screens
-        Color&nbsp;&nbsp;
-      %th.large-screens
-        Rear Wheel size
+      %th= t(".date_indexed")
+      %th.medium-screens= t(".sent_to")
+      %th= t(".manufacturer")
+      %th.large-screens= t(".color")
+      %th.large-screens= t(".rear_wheel_size")
 
     %tbody
       - @bikes.each do |bike|
         %tr
           %td
             - if bike.created_at.today?
-              %span.hidden
-                = bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
-              Today at #{bike.created_at.strftime("%-I %p")}
+              %span.hidden= bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
+              = t(".today_at", timestamp: bike.created_at.strftime("%-I %p"))
             - elsif Date.yesterday().beginning_of_day() <= bike.created_at
-              %span.hidden
-                = bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
-              Yesterday at #{bike.created_at.strftime("%-I %p")}
+              %span.hidden= bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
+              = t(".yesterday_at", timestamp: bike.created_at.strftime("%-I %p"))
             - else
-              %span.hidden
-                = bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
+              %span.hidden= bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
               = bike.created_at.strftime("%-m/%-d/%Y at %-I %p")
-          %td.medium-screens
-            = bike.owner_email
-          %td
-            = bike.mnfg_name
-          %td.large-screens
-            = bike.primary_frame_color.name
-          %td.large-screens
-            = bike.rear_wheel_size.name
+          %td.medium-screens= bike.owner_email
+          %td= bike.mnfg_name
+          %td.large-screens= bike.primary_frame_color.name
+          %td.large-screens= bike.rear_wheel_size.name
 
 %hr
 %section
 
-  %h4
-    Edit #{@user.email}
+  %h4= t(".edit_user_email", user_email: @user.email)
 
   .form.form-horizontal
     = form_for @membership do |f|
-
       .control-group
         = f.label :role, class: "control-label"
         .controls.radio-controls
           %label.radio
             = f.radio_button :role, "admin"
-            Admin of organization
+            = t(".admin_of_organization")
           %label.radio
             = f.radio_button :role, "member"
-            Member of organization
+            = t(".member_of_organization")
 
       .membership-actions
-        = f.submit 'Update role', class: 'button-green'
-        = link_to "Delete member", membership_url(@membership), method: :delete, data: { confirm: "Are you sure you want to remove #{@user.email} from your organization?" }, class: "button-red"
+        = f.submit t(".update_role"), class: 'button-green'
+        = link_to t(".delete_member"),
+        membership_url(@membership),
+        method: :delete,
+        data: { confirm: t(".confirmation", user_email: @user.email)},
+        class: "button-red"
