--- a/app/assets/stylesheets/revised/sections/primary_footer.scss
+++ b/app/assets/stylesheets/revised/sections/primary_footer.scss
@@ -32,6 +32,7 @@ $primary-footer-top-margin: 6 * $vertical-height;
 
   .locale-form {
     font-size: 12px;
+
     label {
       margin-right: 5px;
     }
@@ -48,7 +49,7 @@ $primary-footer-top-margin: 6 * $vertical-height;
       color: #fff;
       font-size: 14px;
       font-weight: 600;
-      margin-bottom: 0.5 * $vertical-height;
+      margin-bottom: .5 * $vertical-height;
     }
 
     ul {
@@ -67,24 +68,14 @@ $primary-footer-top-margin: 6 * $vertical-height;
         width: 33.33%;
       }
 
-      svg {
-        display: inline-block;
-        max-height: 4 * $vertical-height;
-      }
-
-      .svgpath {
-        fill: $gray-light;
-        transition: color 0.05s linear;
-      }
-
       a {
         display: block;
         position: relative;
 
         &:hover,
         &:active {
-          .svgpath {
-            fill: lighten($gray-light, 15%);
+          .fab {
+            color: lighten($gray-light, 15%);
           }
         }
       }
@@ -111,6 +102,16 @@ $primary-footer-top-margin: 6 * $vertical-height;
   padding-top: 2 * $vertical-height;
   margin-top: 3 * $vertical-height;
   border-top: $gray-lighter 1px solid;
+}
+
+//
+// Large Screen Styles
+@media (max-width: $grid-breakpoint-lg - 1px) and (min-width: $grid-breakpoint-md) {
+  .social-nav {
+    li {
+      margin: auto 10px;
+    }
+  }
 }
 
 //
