--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -174,7 +174,7 @@
           %td
             More to come soon
 .row.mt-4
-  .col-md-6
+  .col-12
     %p
       %strong
         = link_to "Edit/Create Invoices", admin_organization_invoices_path(organization_id: @organization.to_param)
