--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -144,34 +144,9 @@
 - if @user.memberships.count > 0
   %h4.mt-4
     = @user.memberships.count
-    Current memberships
-  .full-screen-table
-    %table.table.table-striped.table-bordered.table-sm
-      %thead.thead-light
-        %th
-          Id&nbsp;
-        %th.d-none.d-lg-table-cell
-          Created&nbsp;<small class="convertTimezone"></small>
-        %th
-          Email
-        %th
-          Organization
-        %th.d-none.d-xl-table-cell
-          Management links
-      %tbody
-        - @user.memberships.each do |membership|
-          %tr
-            %td
-              = link_to membership.id, admin_membership_url(membership)
-            %td.d-none.d-lg-table-cell
-              %span.convertTime
-                = l membership.created_at, format: :convert_time
-            %td
-              = membership.user.email
-            %td
-              = link_to membership.organization.name, admin_organization_path(membership.organization)
-            %td.d-none.d-xl-table-cell
-              #{link_to 'Edit', edit_admin_membership_url(membership)}
+    Memberships
+  = render partial: "/admin/memberships/table", locals: { organization_invitations: @user.memberships }
+
 
 - if @user.user_emails.count > 1
   %h2 User emails
