--- a/app/views/organized_mailer/organization_invitation.html.haml
+++ b/app/views/organized_mailer/organization_invitation.html.haml
@@ -1,8 +1,10 @@
 %h1
-  Hello #{@organization_invitation.invitee_name},
+  Hello #{@organization_invitation.invited_display_name},
+
 - if @is_new_user
   %h2
     Welcome to Bike Index
-%p #{@inviter.display_name} has indicated that you are a member of #{@organization.name}.
+- if @sender.present?
+  %p #{@sender.display_name} has indicated that you are a member of #{@organization.name}.
 
 = link_to "Join #{@organization.short_name}", new_user_url(email: @vars[:email]), class: 'binx-button'
