--- a/app/views/admin/bikes/_table.html.haml
+++ b/app/views/admin/bikes/_table.html.haml
@@ -37,7 +37,7 @@
               .less-strong-hold
                 %a.small.convertTime{ href: edit_admin_bike_url(bike) }
                   = l bike.created_at, format: :convert_time
-                %span.less-strong-right.d-none.d-md-table-cell
+                %span.less-strong-right.d-none.d-md-block
                   - if bike.example
                     %span.text-danger
                       = bike.id
