set email_invitation_sent_at

--- a/app/views/organized_mailer/organization_invitation.html.haml
+++ b/app/views/organized_mailer/organization_invitation.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Hello #{@organization_invitation.invited_display_name},
+  Hello #{@membership.invited_display_name},
 
 - if @is_new_user
   %h2
