--- a/app/views/organized_mailer/organization_invitation.text.haml
+++ b/app/views/organized_mailer/organization_invitation.text.haml
@@ -1,4 +1,4 @@
-Hello #{'Welcome to Bike Index' if @new_user == true}
+Hello#{", Welcome to Bike Index" if @new_user == true}
 
 - if @sender.present?
   #{@sender.display_name} has indicated that you are a member of #{@organization.name}.
