--- a/app/views/organized/users/new.html.haml
+++ b/app/views/organized/users/new.html.haml
@@ -2,25 +2,25 @@
   %h1
     Invite user
   %p
-    You have invited
+    You have invited:
     %strong
-      #{ pluralize(current_organization.sent_invitation_count, 'user') },
-    %br
-    And can add
+      = number_with_delimiter(current_organization.sent_invitation_count)
+      = "user".pluralize(current_organization.sent_invitation_count)
+  %p
+    You can add
     %strong
-      #{current_organization.available_invitation_count} more.
+      = number_with_delimiter current_organization.remaining_invitation_count
+      more
 
-= form_for @organization_invitation, { as: :organization_invitation, url: organization_users_path(organization_id: current_organization.to_param), action: 'create', html: { class: 'organized-form' } } do |f|
+= form_for @membership, { as: :membership, url: organization_users_path(organization_id: current_organization.to_param), action: 'create', html: { class: 'organized-form' } } do |f|
 
   .form-group.row
-    = f.label :invitee_email, "Email you're inviting", class: 'org-form-label'
+    = f.label :invited_email, "Email you're inviting", class: 'org-form-label'
     .col-sm-4
-      = f.email_field :invitee_email, required: true, class: 'form-control'
-
-  .form-group.row
-    = f.label :invitee_name, 'Name', class: 'org-form-label'
-    .col-sm-4
-      = f.text_field :invitee_name, required: true, class: 'form-control'
+      = f.email_field :invited_email, required: true, class: 'form-control'
+      .below-input-help
+        %a{ href: "#" }
+          Invite multiple emails
 
   .form-group.row
     %label.org-form-label
@@ -28,11 +28,11 @@
     .col-sm-4
       .radio
         %label
-          = f.radio_button :membership_role, Membership.membership_types.first
+          = f.radio_button :role, Membership.membership_types.first
           Admin of organization
       .radio
         %label
-          = f.radio_button :membership_role, Membership.membership_types.second
+          = f.radio_button :role, Membership.membership_types.second
           Member of organization
 
   .form-group.row
