--- a/app/views/admin/memberships/_form.html.haml
+++ b/app/views/admin/memberships/_form.html.haml
@@ -1,26 +1,26 @@
-
 = form_for [:admin, @membership] do |f|
   - if @membership.errors.any?
-    = render partial: "/shared/errors", locals: { name: "Payment", obj: @membership }
-  %h3
-    User membership
+    = render partial: "/shared/errors", locals: { name: "Membership", obj: @membership }
   .form-group
     = f.label :organization
-    = collection_select( :membership, :organization_id, @organizations, :id, :name, {include_blank: "Please select an organization"},:required =>true,  class: "form-control w-25" )
+    = collection_select :membership, :organization_id, @organizations, :id, :name, { include_blank: "Please select an organization" }, required: true,  class: "form-control w-25"
 
 
   .form-group
-    = f.label :email
+    = f.label :invited_email
     = f.text_field :invited_email, class: "form-control w-25"
 
   .form-group
-    = f.label :role, "Role: "
     %label
-      = f.radio_button :role, "admin"
-      Admin of organization
-    %label
-      = f.radio_button :role, "member"
-      Member of organization
+      Role
+    .form-check
+      %label
+        = f.radio_button :role, "admin", class: "form-check-input"
+        Admin of organization
+    .form-check
+      %label
+        = f.radio_button :role, "member", class: "form-check-input"
+        Member of organization
 
 
 
