--- a/app/views/organized/users/new.html.haml
+++ b/app/views/organized/users/new.html.haml
@@ -15,22 +15,22 @@
 = form_for @membership, { as: :membership, url: organization_users_path(organization_id: current_organization.to_param), action: 'create', html: { class: 'organized-form' } } do |f|
   - if @membership.errors.any?
     = render partial: "/shared/errors", locals: { name: "Membership", obj: @membership }
-
-  .form-group.row#singleEmailInvite
+  - display_multi_invite = params[:multiple_emails_invited].present?
+  .form-group.row#singleEmailInvite{ class: display_multi_invite ? "currently-hidden" : "" }
     = f.label :invited_email, "Email you're inviting", class: "org-form-label"
     .col-sm-4
       = f.email_field :invited_email, class: "form-control"
       .below-input-help
         %a#multipleUserSelect{ href: "#" }
           Invite multiple emails
-  .form-group.row.currently-hidden#multipleEmailInvite
+  .form-group.row#multipleEmailInvite{ class: display_multi_invite ? "" : "currently-hidden" }
     = label_tag :multiple_emails_invited, class: "org-form-label" do
       Multiple emails
       %br
       %em.small
         1 email per line
-    .col-sm-4.currently-hidden#multipleEmailInviteField
-      = text_area_tag :multiple_emails_invited, "", placeholder: "example@example.com\nexample2@example.com\nexample3@example.com", rows: 4, class: "form-control"
+    .col-sm-4#multipleEmailInviteField{ class: display_multi_invite ? "" : "currently-hidden" }
+      = text_area_tag :multiple_emails_invited, params[:multiple_emails_invited], placeholder: "example@example.com\nexample2@example.com\nexample3@example.com", rows: 4, class: "form-control"
 
   .form-group.row
     %label.org-form-label
