--- a/app/views/admin/memberships/_table.html.haml
+++ b/app/views/admin/memberships/_table.html.haml
@@ -22,7 +22,10 @@
           - else
             Organization
       %th
-        Claimed at
+        - if render_sortable
+          = sortable "claimed_at"
+        - else
+          Claimed
       %th
         %small
           - if render_sortable
@@ -32,9 +35,9 @@
       %th
         %small
           - if render_sortable
-            = sortable "membership_role", "Role"
+            = sortable "membership_role", "Admin?"
           - else
-            Role
+            Admin?
 
     %tbody
       - memberships.each do |membership|
@@ -50,8 +53,9 @@
               = link_to membership.invited_email, admin_user_path(membership.user.to_param)
             - else
               = membership.invited_email
-          %td
-            = link_to membership.organization.name, admin_organization_path(membership.organization)
+          - unless skip_organization
+            %td
+              = link_to membership.organization.name, admin_organization_path(membership.organization)
           %td
             - if membership.claimed_at.present?
               %span.convertTime
@@ -62,4 +66,4 @@
             - else
               = membership.sender_id
           %td
-            = membership.role
+            = "&#x2713;".html_safe if membership.admin?
