--- a/app/views/admin/memberships/index.html.haml
+++ b/app/views/admin/memberships/index.html.haml
@@ -7,12 +7,19 @@
       %li.nav-item
         = link_to "New Membership", new_admin_membership_url, class: "nav-link"
 
-%h2
-  = @memberships.count
-  Current memberships
+%h4
+  = number_with_delimiter @memberships.total_count
+  matching
+  = "membership".pluralize(@memberships.total_count)
+- if current_organization.present?
+  %p.mt-2
+    Viewing #{link_to current_organization.name, admin_organization_path(current_organization)} Memberships
+    %small
+      = link_to "view orgs view", organization_users_path(organization_id: current_organization.to_param), class: "less-strong"
 
-= paginate @memberships, views_prefix: 'admin'
+.mt-4
+  = paginate @memberships, views_prefix: 'admin'
 
-= render partial: "/admin/memberships/table", locals: { memberships: @memberships }
+= render partial: "/admin/memberships/table", locals: { memberships: @memberships, render_sortable: true }
 
 = paginate @memberships, views_prefix: 'admin'
