more minor updates

--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -183,10 +183,10 @@
           .row
             .col-6.form-group
               = s.label :police_report_department
-              = s.text_area :police_report_department, class: "form-control"
+              = s.text_field :police_report_department, class: "form-control"
             .col-6.form-group
               = s.label :police_report_number
-              = s.text_area :police_report_number, class: "form-control"
+              = s.text_field :police_report_number, class: "form-control"
           .row
             .col-6.form-group
               = f.label :estimated_value, "Estimated value"
